fix(hero-banner): spacing

--- a/src/3_blocks/hero-banner/style.scss
+++ b/src/3_blocks/hero-banner/style.scss
@@ -77,7 +77,7 @@
 
   &--product {
     #{$self}__content {
-      padding: 0;
+      padding-top: 0;
     }
 
     #{$self}__column {
