--- a/src/altaprofits.scss
+++ b/src/altaprofits.scss
@@ -121,6 +121,7 @@ TOKENS
   /*
   MOTION
   */
+  --motion-duration-instant: 0.1s;
   --motion-duration-short: 0.3s;
   --motion-duration-medium: 0.6s;
   --motion-duration-long: 1.2s;
